src/objects/GP_Control_de_evento__c.object
<CustomObject>
    <fields>
        <fullName>Cant_consecutiva__c</fullName>
        <label>Cantidad consecutiva</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fecha_ultimo_evento__c</fullName>
        <label>Fecha_ultimo_evento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Socio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Socio</label>
        <referenceTo>GP_Socio__c</referenceTo>
        <relationshipLabel>GP Control de eventos</relationshipLabel>
        <relationshipName>GP_Control_de_eventos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tipo_de_evento__c</fullName>
        <label>Tipo de evento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bienvenida</fullName>
                </value>
                <value>
                    <fullName>Confiabilización</fullName>
                </value>
                <value>
                    <fullName>Premio Recarga 3M</fullName>
                </value>
                <value>
                    <fullName>Castigo Recarga</fullName>
                </value>
                <value>
                    <fullName>Recarga por Monto</fullName>
                </value>
                <value>
                    <fullName>Upselling</fullName>
                </value>
                <value>
                    <fullName>Cater</fullName>
                </value>
                <value>
                    <fullName>Antigüedad</fullName>
                </value>
                <value>
                    <fullName>Alta a FOL</fullName>
                </value>
                <value>
                    <fullName>Continuidad FOL</fullName>
                </value>
                <value>
                    <fullName>Alta a Débito Automatico</fullName>
                </value>
                <value>
                    <fullName>Descarga APP</fullName>
                </value>
                <value>
                    <fullName>Alta Nuevo Servicio Core</fullName>
                </value>
                <value>
                    <fullName>Referidos</fullName>
                </value>
                <value>
                    <fullName>Convergente Fiber</fullName>
                </value>
                <value>
                    <fullName>Convergente Arnet</fullName>
                </value>
                <value>
                    <fullName>Baja</fullName>
                </value>
                <value>
                    <fullName>Transferencia</fullName>
                </value>
                <value>
                    <fullName>Canje</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>GP Control de evento</label>
    <nameField>
        <label>GP Control de eventos Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GP Control de eventos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>